Fix alignment of bytes indicator on mobile diff page.
Minerva commit:
https://gerrit.wikimedia.org/r/#/c/mediawiki/skins/MinervaNeue/+/539351/
removed the padding from small icons and cause a slight regression
where the bytes icon on the mobile diff page was moved too far to the left.

Depends-On: Ia44b3157ecec6a036f3bd6287d4b8096748d4afa

--- a/resources/mobile.special.mobilediff.styles/mobilediff.less
+++ b/resources/mobile.special.mobilediff.styles/mobilediff.less
@@ -41,6 +41,10 @@ footer {
 		display: inline-block;
 	}
 
+	.mw-mf-diff-info {
+		padding-bottom: 1em;
+	}
+
 	.mw-mf-diff-info__link-latest,
 	.mw-mf-diff-info__link-revision {
 		font-size: inherit;
